sample/misc/error/gen_shift-interfere.bfr
codegen $

$build {
  a: array(3) {
    i: index;
    b: array(2) {
      i: index;
    };
  };
} in

$dive a@i [
  $alloc { x: cell; } in
  $dive a@i:b@i [
    $alloc { y: cell; } in
    > a@i
  ]
]
